styles.css
body {
    margin: 0;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background-color: #f5e6da; /* pastel brown background */
    color: black;
}
/* MAIN LAYOUT */
.main-container {
    display: flex;
    height: 100vh;
}
.left img {
    width: 100%;
    height: 100vh;
    object-fit: cover;
    border-top-left-radius: 0;
    border-bottom-right-radius: 50%;
    border-top-right-radius:50% ;
    border-bottom-left-radius: 0;
    opacity: 0.8;
    flex: 0.8;
}

/* RIGHT SIDE */
.right {
    flex: 1.5;
    padding: 40px;
    background-color: #ede0d4; /* lighter pastel brown */
    display: flex;
    flex-direction: column;
    justify-content: center;
}
/* FORM STYLING */
input {
    width: 100%;
    padding: 10px;
    margin: 8px 0;
    border-radius: 5px;
    border: 1px solid #ccc;
}

.gender {
    margin:auto
    display: flex;
    margin-bottom: 40px ;
}
button {
     padding: 10px 60px;
  background-color: burlywood;
  color: black;
  border: none;
  border-radius: 8px;
  font-size: 16px;
  cursor: pointer;
  margin-top: 40px;
    gap: 30px;
}
button:hover {
    background-color: brown;
}

#result {
    margin-top: 20px;
    font-weight: bold;
}

